# COURS

./: Prof_Assistants.md  README.md  Tutorat_Appui.md
Classe_PRG1-A/: readme.md
Classe_PRG1-A/Demos/: 2025-09-17.cpp  2025-09-18.cpp  2025-09-23.cpp  2025-09-24.cpp  2025-09-29.cpp  2025-10-02.cpp  2025-10-08.cpp  2025-10-09.cpp  CMakeLists.txt
Classe_PRG1-A/Rendus_Labo/Labo-01 Wallis/: Suite de Wallis - pseudo code.docx
Classe_PRG1-B/: readme.md
Classe_PRG1-B/Demos/: 2025-09-18  2025-09-18.cpp  2025-09-19.cpp  2025-09-23.cpp  2025-09-25.cpp  2025-09-26.cpp  2025-09-29.cpp  2025-10-02.cpp  2025-10-03.cpp  2025-10-09.cpp  CMakeLists.txt
Laboratoires/: ~$Corrections Labo - template.xlsx
Laboratoires/01_Wallis_pseudo/: readme.md
Laboratoires/02_CLion/: readme.md
Laboratoires/02_Wallis_pseudo/: Suite de Wallis - pseudo code copie.docx  Wallis.xls
Laboratoires/03_IMC/: PRG1-B-Feedback-IMC.xlsx  README.md
Laboratoires/04_nbrePremiers/: readme.md
Laboratoires/05_Comptant/: README.md
